base/sidecars/sidecar_frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: frontend
spec:
  egress:
  - hosts:
    - istio-system/*
    - ./balancereader.bankofanthos.svc.cluster.local
    - ./contacts.bankofanthos.svc.cluster.local
    - ./ledgerwriter.bankofanthos.svc.cluster.local
    - ./transactionhistory.bankofanthos.svc.cluster.local
    - ./userservice.bankofanthos.svc.cluster.local
  workloadSelector:
    labels:
      app: frontend
