base/sidecars/sidecar_ledgerwriter.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: ledgerwriter
spec:
  egress:
  - hosts:
    - istio-system/*
    - ./balancereader.bankofanthos.svc.cluster.local
    - ./ledger-db.bankofanthos.svc.cluster.local
  workloadSelector:
    labels:
      app: ledgerwriter
